# mtv-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
mtv_agent/: agent.py  main.py
mtv_agent/data/playbooks/: browse-source-vms.md  check-cluster-health.md  check-mtv-health.md  create-migration-target.md  create-vsphere-provider.md  migration-status-report.md  monitor-migration-plan.md  show-migration-network-traffic.md  troubleshoot-migration.md
mtv_agent/data/skills/inventory-query-cookbook/: SKILL.md
mtv_agent/data/skills/inventory-tool-guide/: SKILL.md
mtv_agent/data/skills/metrics-query-cookbook/: SKILL.md
web/src/components/: agent-app.ts  chat-composer.ts  chat-message.ts  markdown-renderer.ts
web/src/services/: chat-utils.ts
web/src/state/: app-state.ts
